feat: add generate error operation
